Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I022fbbabc0e4c0fd1f71fb2438738a63459b16a2

--- a/service/res/values-ro/strings.xml
+++ b/service/res/values-ro/strings.xml
@@ -51,7 +51,7 @@
     <string name="car_permission_desc_audio_volume" msgid="536626185654307889">"Controlează volumul audio din mașină."</string>
     <string name="car_permission_desc_audio_settings" msgid="7192007170677915937">"Controlați setările audio ale mașinii"</string>
     <string name="car_permission_label_control_app_blocking" msgid="9112678596919993386">"Blocarea aplicațiilor"</string>
-    <string name="car_permission_desc_control_app_blocking" msgid="7539378161760696190">"Controlează blocarea aplicațiilor în timp ce conduceți."</string>
+    <string name="car_permission_desc_control_app_blocking" msgid="7539378161760696190">"Controlează blocarea aplicațiilor în timp ce conduci."</string>
     <string name="car_permission_car_navigation_manager" msgid="5895461364007854077">"Manager de navigare"</string>
     <string name="car_permission_desc_car_navigation_manager" msgid="6188751054665471537">"Raportează datele de navigare la grupul de instrumente"</string>
     <string name="car_permission_car_display_in_cluster" msgid="4005987646292458684">"Redare directă pe grupul de instrumente"</string>
