--- a/car-admin-ui-lib/src/main/res/values-b+sr+Latn/strings.xml
+++ b/car-admin-ui-lib/src/main/res/values-b+sr+Latn/strings.xml
@@ -16,6 +16,6 @@ limitations under the License.
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="car_admin_ui_managed_device_message_generic" msgid="2432263900803667538">"Ovim vozilom upravlja organizacija"</string>
-    <string name="car_admin_ui_managed_device_message_by_org" msgid="6717022763136116277">"Ovim vozilom upravlja <xliff:g id="ORGANIZATION_NAME">%1$s</xliff:g>"</string>
+    <string name="car_admin_ui_managed_device_message_generic" msgid="2432263900803667538">"Овим возилом управља организација"</string>
+    <string name="car_admin_ui_managed_device_message_by_org" msgid="6717022763136116277">"Овим возилом управља <xliff:g id="ORGANIZATION_NAME">%1$s</xliff:g>"</string>
 </resources>
