--- a/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/values-b+sr+Latn/strings.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/values-b+sr+Latn/strings.xml
@@ -17,5 +17,5 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="notification_header" msgid="7197574085752162581">"Centar za obaveštenja"</string>
+    <string name="notification_header" msgid="7197574085752162581">"Центар за обавештења"</string>
 </resources>
