--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values-b+sr+Latn/strings.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values-b+sr+Latn/strings.xml
@@ -17,5 +17,5 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="hvac_panel_header" msgid="1299061170810305529">"Kontrole režima Prijatno"</string>
+    <string name="hvac_panel_header" msgid="1299061170810305529">"Контроле режима Пријатно"</string>
 </resources>
