--- a/packages/CarManagedProvisioning/res/values-b+sr+Latn/strings.xml
+++ b/packages/CarManagedProvisioning/res/values-b+sr+Latn/strings.xml
@@ -17,30 +17,30 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="brand_screen_header" msgid="4382251935798018352">"Ovo vozilo pripada organizaciji"</string>
-    <string name="contact_device_provider" msgid="338577979231875837">"Da biste saznali više, obratite se <xliff:g id="IT_ADMIN">%1$s</xliff:g>."</string>
-    <string name="organization_admin" msgid="6551608903069550652">"menadžeru organizacije"</string>
-    <string name="if_questions_contact_admin" msgid="4645510019575736238">"Ako imate nekih pitanja, obratite se menadžeru organizacije"</string>
-    <string name="admin_has_ability_to_monitor_device" msgid="3132155961508293345">"Menadžer organizacije može da nadgleda podešavanja, korporativni pristup, aplikacije, dozvole i podatke povezane sa ovim vozilom, kao i da upravlja njima. Tu spadaju aktivnosti na mreži, kao i lokacija ovog vozila.<xliff:g id="LINE_BREAK">
+    <string name="brand_screen_header" msgid="4382251935798018352">"Ово возило припада организацији"</string>
+    <string name="contact_device_provider" msgid="338577979231875837">"Да бисте сазнали више, обратите се <xliff:g id="IT_ADMIN">%1$s</xliff:g>."</string>
+    <string name="organization_admin" msgid="6551608903069550652">"менаџеру организације"</string>
+    <string name="if_questions_contact_admin" msgid="4645510019575736238">"Ако имате неких питања, обратите се менаџеру организације"</string>
+    <string name="admin_has_ability_to_monitor_device" msgid="3132155961508293345">"Менаџер организације може да надгледа подешавања, корпоративни приступ, апликације, дозволе и податке повезане са овим возилом, као и да управља њима. Ту спадају активности на мрежи, као и локација овог возила.<xliff:g id="LINE_BREAK">
 
-</xliff:g>Obratite se menadžeru lokacije ako želite više informacija, uključujući politiku privatnosti organizacije."</string>
-    <string name="contact_your_admin_for_more_info" msgid="1419852317652804536">"Obratite se menadžeru lokacije ako želite više informacija, uključujući politiku privatnosti organizacije."</string>
-    <string name="managed_device_info" msgid="2134697391634083944">"Ovo je vozilo kojim se upravlja"</string>
-    <string name="contact_your_admin_for_help" msgid="1741496631607502730">"Potražite pomoć od menadžera organizacije"</string>
-    <string name="fully_managed_device_provisioning_accept_header" msgid="8767138982035307813">"Podesite vozilo kojim se upravlja"</string>
-    <string name="fully_managed_device_provisioning_step_1_header" msgid="8704166635032524345">"Pristup aplikacijama organizacije"</string>
-    <string name="fully_managed_device_provisioning_step_1_description" msgid="5960961281295355254">"Podešava se sistem za info-zabavu..."</string>
-    <string name="fully_managed_device_provisioning_step_2_header" msgid="5888602026900289468">"Podaci sistema za info-zabavu nisu privatni"</string>
-    <string name="fully_managed_device_provisioning_step_2_subheader_title" msgid="1421575203782743214">"Aktivnosti i podaci"</string>
-    <string name="fully_managed_device_provisioning_step_2_subheader" msgid="4881961368653838979">"Menadžer organizacije će možda moći da vidi vaše aktivnosti i podatke iz ovog vozila."</string>
-    <string name="fully_managed_device_provisioning_permissions_secondary_subheader" msgid="8955791361423166123">"Menadžer organizacije može da podešava dozvole za aplikacije u ovom vozilu, kao što su dozvole za mikrofon i lokaciju."</string>
-    <string name="fully_managed_device_with_permission_control_provisioning_summary" msgid="2503568673345133100">"Koristite sistem vozila za info-zabavu da biste jednostavno pristupali poslovnim aplikacijama. Ovo vozilo nije privatno, pa će menadžer organizacije možda moći da vidi vaše aktivnosti i podatke. Menadžer organizacije može i da podešava dozvole za aplikacije u ovom vozilu, kao što su dozvole za mikrofon i lokaciju."</string>
-    <string name="fully_managed_device_provisioning_summary" msgid="4323948058344613817">"Koristite sistem vozila za info-zabavu da biste jednostavno pristupali poslovnim aplikacijama. Ovo vozilo nije privatno, pa će menadžer organizacije možda moći da vidi vaše podatke i aktivnosti."</string>
-    <string name="fully_managed_device_provisioning_progress_label" msgid="988594700479673633">"Podešava se vozilo kojim se upravlja"</string>
-    <string name="fully_managed_device_provisioning_return_device_title" msgid="1578111657911434819">"Otkažite podešavanje i vratite uređaj"</string>
-    <string name="fully_managed_device_provisioning_return_device_subheader" msgid="5809488930429106172">"Resetujte i vratite ovo vozilo menadžeru organizacije ili se vratite na prethodni ekran da biste nastavili sa podešavanjem."</string>
-    <string name="fully_managed_device_cancel_setup_button" msgid="4113790677940440998">"Otkažite podešavanje"</string>
-    <string name="fully_managed_device_reset_and_return_button" msgid="4951274590516561428">"Resetuj i vrati"</string>
-    <string name="fully_managed_device_provisioning_privacy_title" msgid="4789425994893472324">"Obaveštenje o privatnosti"</string>
-    <string name="fully_managed_device_provisioning_privacy_body" msgid="5549745709511179391">"Menadžer organizacije će možda moći da vidi vaše podatke i aktivnosti iz ovog vozila."</string>
+</xliff:g>Обратите се менаџеру локације ако желите више информација, укључујући политику приватности организације."</string>
+    <string name="contact_your_admin_for_more_info" msgid="1419852317652804536">"Обратите се менаџеру локације ако желите више информација, укључујући политику приватности организације."</string>
+    <string name="managed_device_info" msgid="2134697391634083944">"Ово је возило којим се управља"</string>
+    <string name="contact_your_admin_for_help" msgid="1741496631607502730">"Потражите помоћ од менаџера организације"</string>
+    <string name="fully_managed_device_provisioning_accept_header" msgid="8767138982035307813">"Подесите возило којим се управља"</string>
+    <string name="fully_managed_device_provisioning_step_1_header" msgid="8704166635032524345">"Приступ апликацијама организације"</string>
+    <string name="fully_managed_device_provisioning_step_1_description" msgid="5960961281295355254">"Подешава се систем за инфо-забаву..."</string>
+    <string name="fully_managed_device_provisioning_step_2_header" msgid="5888602026900289468">"Подаци система за инфо-забаву нису приватни"</string>
+    <string name="fully_managed_device_provisioning_step_2_subheader_title" msgid="1421575203782743214">"Активности и подаци"</string>
+    <string name="fully_managed_device_provisioning_step_2_subheader" msgid="4881961368653838979">"Менаџер организације ће можда моћи да види ваше активности и податке из овог возила."</string>
+    <string name="fully_managed_device_provisioning_permissions_secondary_subheader" msgid="8955791361423166123">"Менаџер организације може да подешава дозволе за апликације у овом возилу, као што су дозволе за микрофон и локацију."</string>
+    <string name="fully_managed_device_with_permission_control_provisioning_summary" msgid="2503568673345133100">"Користите систем возила за инфо-забаву да бисте једноставно приступали пословним апликацијама. Ово возило није приватно, па ће менаџер организације можда моћи да види ваше активности и податке. Менаџер организације може и да подешава дозволе за апликације у овом возилу, као што су дозволе за микрофон и локацију."</string>
+    <string name="fully_managed_device_provisioning_summary" msgid="4323948058344613817">"Користите систем возила за инфо-забаву да бисте једноставно приступали пословним апликацијама. Ово возило није приватно, па ће менаџер организације можда моћи да види ваше податке и активности."</string>
+    <string name="fully_managed_device_provisioning_progress_label" msgid="988594700479673633">"Подешава се возило којим се управља"</string>
+    <string name="fully_managed_device_provisioning_return_device_title" msgid="1578111657911434819">"Откажите подешавање и вратите уређај"</string>
+    <string name="fully_managed_device_provisioning_return_device_subheader" msgid="5809488930429106172">"Ресетујте и вратите ово возило менаџеру организације или се вратите на претходни екран да бисте наставили са подешавањем."</string>
+    <string name="fully_managed_device_cancel_setup_button" msgid="4113790677940440998">"Откажите подешавање"</string>
+    <string name="fully_managed_device_reset_and_return_button" msgid="4951274590516561428">"Ресетуј и врати"</string>
+    <string name="fully_managed_device_provisioning_privacy_title" msgid="4789425994893472324">"Обавештење о приватности"</string>
+    <string name="fully_managed_device_provisioning_privacy_body" msgid="5549745709511179391">"Менаџер организације ће можда моћи да види ваше податке и активности из овог возила."</string>
 </resources>
