--- a/car-usb-handler/res/values-b+sr+Latn/strings.xml
+++ b/car-usb-handler/res/values-b+sr+Latn/strings.xml
@@ -16,15 +16,15 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="6963366455471441257">"Aplikacija za upravljanje USB-om"</string>
-    <string name="usb_saved_devices" msgid="2829442070749964872">"Sačuvani uređaji"</string>
-    <string name="usb_pref_delete_title" msgid="3885061814853467483">"Uklonite aplikacije za upravljanje za USB uređaj"</string>
-    <string name="usb_pref_delete_message" msgid="5849493572520646218">"Želite li stvarno da izbrišete podrazumevanu aplikaciju za upravljanje za %1$s?"</string>
-    <string name="usb_pref_delete_yes" msgid="7803356145103146036">"Da"</string>
-    <string name="usb_pref_delete_cancel" msgid="5999791462730255929">"Otkaži"</string>
-    <string name="usb_resolving_handlers" msgid="1943100136172948686">"Preuzimaju se podržane aplikacije za upravljanje"</string>
-    <string name="usb_unknown_device" msgid="4211439272338937095">"Nepoznat USB uređaj"</string>
-    <string name="usb_boot_service_notification" msgid="8519949189071048797">"Analiziranje USB uređaja"</string>
+    <string name="app_name" msgid="6963366455471441257">"Апликација за управљање USB-ом"</string>
+    <string name="usb_saved_devices" msgid="2829442070749964872">"Сачувани уређаји"</string>
+    <string name="usb_pref_delete_title" msgid="3885061814853467483">"Уклоните апликације за управљање за USB уређај"</string>
+    <string name="usb_pref_delete_message" msgid="5849493572520646218">"Желите ли стварно да избришете подразумевану апликацију за управљање за %1$s?"</string>
+    <string name="usb_pref_delete_yes" msgid="7803356145103146036">"Да"</string>
+    <string name="usb_pref_delete_cancel" msgid="5999791462730255929">"Откажи"</string>
+    <string name="usb_resolving_handlers" msgid="1943100136172948686">"Преузимају се подржане апликације за управљање"</string>
+    <string name="usb_unknown_device" msgid="4211439272338937095">"Непознат USB уређај"</string>
+    <string name="usb_boot_service_notification" msgid="8519949189071048797">"Анализирање USB уређаја"</string>
   <string-array name="config_AoapIncompatibleDeviceIds">
     <item msgid="4267974637522344258">"18d1:9302"</item>
   </string-array>
