--- a/car_product/car_ui_portrait/rro/CarUiPortraitDialerRRO/res/values-b+sr+Latn/strings.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitDialerRRO/res/values-b+sr+Latn/strings.xml
@@ -17,10 +17,10 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="restricted_dialing_mode_label" msgid="7172816353849537731">"Коришћење бројчаника је онемогућено током вожње"</string>
-    <string name="emergency_button_text" msgid="5012352862848993348">"Хитан случај"</string>
-    <string name="connect_bluetooth_button_text" msgid="3404373747160373407">"Повезивање са Bluetooth-ом"</string>
+    <string name="restricted_dialing_mode_label" msgid="7172816353849537731">"Korišćenje brojčanika je onemogućeno tokom vožnje"</string>
+    <string name="emergency_button_text" msgid="5012352862848993348">"Hitan slučaj"</string>
+    <string name="connect_bluetooth_button_text" msgid="3404373747160373407">"Povezivanje sa Bluetooth-om"</string>
     <string name="decline_call" msgid="3593508497959313142"></string>
     <string name="answer_call" msgid="5688982198411188640"></string>
-    <string name="no_hfp" msgid="2403350988312998712">"Да бисте довршили позив, прво повежите телефон са аутомобилом преко Bluetooth-а."</string>
+    <string name="no_hfp" msgid="2403350988312998712">"Da biste dovršili poziv, prvo povežite telefon sa automobilom preko Bluetooth-a."</string>
 </resources>
