--- a/tests/MultiDisplaySecondaryHomeTestLauncher/res/values-b+sr+Latn/strings.xml
+++ b/tests/MultiDisplaySecondaryHomeTestLauncher/res/values-b+sr+Latn/strings.xml
@@ -18,11 +18,11 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="3477029631237519798">"MultiDisplay"</string>
-    <string name="md_launcher" msgid="327845696688732506">"MD покретач"</string>
-    <string name="couldnt_launch" msgid="7815676424138012351">"Покретање активности није успело"</string>
-    <string name="select_display" msgid="1682700853391296117">"Изаберите екран"</string>
-    <string name="add_app_shortcut" msgid="8873512136913188432">"Додајте пречицу за апликацију"</string>
-    <string name="set_wallpaper" msgid="3650915172749345197">"Подесите позадину"</string>
-    <string name="new_instance" msgid="1924479866055190730">"Затражите покретање у новој инстанци"</string>
-    <string name="wallpaper_description" msgid="5885164573334720996">"Пример позадине за више екрана"</string>
+    <string name="md_launcher" msgid="327845696688732506">"MD pokretač"</string>
+    <string name="couldnt_launch" msgid="7815676424138012351">"Pokretanje aktivnosti nije uspelo"</string>
+    <string name="select_display" msgid="1682700853391296117">"Izaberite ekran"</string>
+    <string name="add_app_shortcut" msgid="8873512136913188432">"Dodajte prečicu za aplikaciju"</string>
+    <string name="set_wallpaper" msgid="3650915172749345197">"Podesite pozadinu"</string>
+    <string name="new_instance" msgid="1924479866055190730">"Zatražite pokretanje u novoj instanci"</string>
+    <string name="wallpaper_description" msgid="5885164573334720996">"Primer pozadine za više ekrana"</string>
 </resources>
