--- a/tests/MultiDisplayTest/res/values-b+sr+Latn/strings.xml
+++ b/tests/MultiDisplayTest/res/values-b+sr+Latn/strings.xml
@@ -16,9 +16,9 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="presentation_photo_text" msgid="5389774650379965299">"Приказује се слика #%1$d на екрану #%2$d: %3$s."</string>
-    <string name="presentation_info_button" msgid="3138993281071284633">"Информације"</string>
-    <string name="presentation_display_id_text" msgid="4094870216265474973">"Екран #%1$d: %2$s"</string>
-    <string name="presentation_alert_info_text" msgid="8826889501417145349">"Информације о екрану #%1$d"</string>
-    <string name="presentation_alert_dismiss_text" msgid="9001797425513629072">"Потврди"</string>
+    <string name="presentation_photo_text" msgid="5389774650379965299">"Prikazuje se slika #%1$d na ekranu #%2$d: %3$s."</string>
+    <string name="presentation_info_button" msgid="3138993281071284633">"Informacije"</string>
+    <string name="presentation_display_id_text" msgid="4094870216265474973">"Ekran #%1$d: %2$s"</string>
+    <string name="presentation_alert_info_text" msgid="8826889501417145349">"Informacije o ekranu #%1$d"</string>
+    <string name="presentation_alert_dismiss_text" msgid="9001797425513629072">"Potvrdi"</string>
 </resources>
